# mermaid-workflow-agent

./: README.md  main.py  pyproject.toml
openwebui_function/: transcribe_audio.py
resources/: system_prompt.md
test_service/: Dockerfile  main.py  pyproject.toml  requirements.txt
whisperx_service/: .env.example  Dockerfile  main.py  pyproject.toml  railway.json  requirements.txt
